
syntax ="proto3";

message RegisterThingTX {
    bytes Nonce =1;
    repeated string Identities =2;
    string RegistrantPubkey =3;
    bytes Signature =4;
    string Data =5;
    string Spec =6;
}

message CreateRegistrantTX{
    string RegistrantName =1;
    bytes RegistrantPubkey =2;
    bytes Signature =4;
    string Data =3;
}

message RegisterSpecTX{
	string SpecName =1;
	string RegistrantPubkey =2;
	bytes Signature =3;
    string Data =4;
}